<resources>
    <string name="app_name">Pallet Tracker Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="m_connect_str">CONNECTIVITY</string>
    <string name="m_sd_func_str">SD FUNCTION</string>
    <string name="m_rf_conf_str">RF CONFIG</string>
    <string name="m_rf_acc_str">RF ACCESS</string>
    <string name="m_rf_sel_str">RF SELECTION</string>
    <string name="m_rapid_str">RAPID READ</string>
    <string name="m_inv_str">INVENTORY</string>
    <string name="m_bar_str">BARCODE</string>
    <string name="m_bat_str">BATTERY</string>
    <string name="m_info_str">INFORMATION</string>
    <string name="read_start_str">START</string>
    <string name="read_stop_str">STOP</string>
    <string name="yes_str">YES</string>
    <string name="no_str">NO</string>
    <string name="want_tracking_str">Do you want to track selected tag?</string>
    <string name="locating_str">Locating</string>
    <string name="sled_info_str">Software Information</string>
    <string name="copyright_str">Copyright © 2015 - 2017 Bluebird Inc,\nAll rights reserved.</string>
    <string name="copy_str">Copyright © 2017 Bluebird Inc, All Rights Reserved.</string>
    <string name="set_mode_key_enable_str">Set ModeKey Enable</string>
    <string name="set_mode_key_disable_str">Set ModeKey Disable</string>
    <string name="get_mode_key_enable_state_str">Get ModeKey State</string>
    <string name="set_trg_key_enable_str">Set TriggerKey Enable</string>
    <string name="set_trg_key_disable_str">Set TriggerKey Disable</string>
    <string name="get_trg_key_enable_state_str">Get TriggerKey State</string>
    <string name="set_multi_scan_type_enable_str">MultiScanType Enable</string>
    <string name="set_multi_scan_type_disable_str">MultiScanType Disable</string>
    <string name="get_multi_scan_type_str">Get MultiScanType State</string>
    <string name="os_version_str" translatable="false">Android Build Number : </string>
    <string name="rf_lib_version_str" translatable="false">RFID Library Version : </string>
    <string name="rf_module_version_str" translatable="false">RFID Module Version : </string>
    <string name="sd_lib_version_str" translatable="false">RFR900 Firmware Version : </string>
    <string name="sd_bt_version_str" translatable="false">RFR900 BT Firmware Version : </string>
    <string name="sd_serial_str" translatable="false">RFR900 Serial Number : </string>
    <string name="app_version_str" translatable="false">Application Version : </string>
    <string name="bootloader_version_str" translatable="false">RFR900 Bootloader Version : </string>
    <string name="sel_mem_type_str">Memtype</string>
    <string name="sel_mask_str">Mask</string>
    <string name="sel_start_pos_str">StartPos</string>
    <string name="sel_mask_length_str">Mask Length</string>
    <string name="sel_action_str">Action</string>
    <string name="set_criteria_str">Set Criteria</string>
    <string name="remove_criteria_str">Remove Criteria</string>
    <string name="set_selection_str">Set Selection</string>
    <string name="get_selection_str">Get Selection</string>
    <string name="remove_selection_str">Remove Selection</string>
    <string name="sled_connected_str">RFR900 State : Connected</string>
    <string name="remove_pc_str">REMOVE PC</string>
    <string name="selection_str">SELECT</string>
    <string name="toggle_str">TOGGLE</string>
    <string name="file_str">FILE</string>
    <string name="session_str" translatable="false">Session</string>
    <string name="sel_flag_str" translatable="false">SL Flag</string>
    <string name="turbo_str" translatable="false">TURBO</string>
    <string name="rssi_str2" translatable="false">RSSI</string>
    <string name="filter_str">FILTER</string>
    <string name="sound_str">SOUND</string>
    <string name="inven_str">START</string>
    <string name="track_str">START</string>
    <string name="stop_inven_str">STOP</string>
    <string name="stop_track_str">STOP</string>
    <string name="back_inv_str">Back to Inventory</string>
    <string name="available_regions_str">Available Regions</string>
    <string name="set_region_str">Set Region</string>
    <string name="get_region_str">Get Region</string>
    <string name="get_available_region_str">Available Region</string>
    <string name="set_target_str">Set Inventory\nTarget</string>
    <string name="get_target_str">Get Inventory\nTarget</string>
    <string name="set_duty_str">Set Duty\n(0 ~ 1000)</string>
    <string name="get_duty_str">Get Duty</string>
    <string name="set_accesstime_str">Set AccessTimeout\n(100 ~ 10000)</string>
    <string name="get_accesstime_str">Get AccessTimeout</string>
    <string name="set_dwell_str">Set Dwelltime\n(50 ~ 400)</string>
    <string name="get_dwell_str">Get Dwelltime</string>
    <string name="set_power_str">Set RFPower\n(5 ~ 30)</string>
    <string name="get_power_str">Get RFPower</string>
    <string name="set_sing_str">Set Singulation\n(0 ~ 15)</string>
    <string name="get_sing_str">Get Singulation</string>
    <string name="set_rfmode_str">Set RFMode\n(0 ~ 3)</string>
    <string name="get_rfmode_str">Get RFMode</string>
    <string name="set_toggle_str">Set Toggle</string>
    <string name="get_toggle_str">Get Toggle</string>
    <string name="set_rssi_str">Set RSSI</string>
    <string name="get_rssi_str">Get RSSI</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="received_msg_str">Message : </string>
    <string name="received_data_str">Recv Data : </string>
    <string name="version_str">"Version"</string>
    <string name="read_data_str">"Read Data : "</string>
    <string name="empty_str" translatable="false">""</string>
    <string name="connect_state_str">"Current Connect State : "</string>
    <string name="rfid_module_is">RFID Module is</string>
    <string name="rfid_module_battery_is">RFID Module Battery is</string>
    <string name="connect_str">"Connect"</string>
    <string name="disconnect_str">"Disconnect"</string>
    <string name="connected_str">"Connected"</string>
    <string name="home_str">"Home"</string>
    <string name="disconnected_str">"Disconnected"</string>
    <string name="get_con_str">"Get connection state"</string>
    <string name="set_rfid_str">"Set RFID Mode"</string>
    <string name="set_barcode_str">"Set BARCODE Mode"</string>
    <string name="get_trg_str">"Get trg Mode"</string>
    <string name="pause_barcode_str">"Pause Barcode"</string>
    <string name="resume_barcode_str">"Resume Barcode"</string>
    <string name="get_barcode_state_str">"Get Barcode State"</string>
    <string name="enable_multi_str">"Enable Multi"</string>
    <string name="disable_multi_str">"Disable Multi"</string>
    <string name="get_multi_str">"Get Multi State"</string>
    <string name="press_barcode_str">"Barcode Press"</string>
    <string name="release_barcode_str">"Barcode Release"</string>
    <string name="set_barcode_hw_str">"Set BC/HW Key"</string>
    <string name="get_barcode_hw_str">"Get BC/HW Key"</string>
    <string name="set_trigger_str">"Set BC Trigger"</string>
    <string name="get_trigger_str">"Get BC Trigger"</string>
    <string name="set_multi_count_str">"Set Multi Num"</string>
    <string name="set_sleep_str">"Set Sleeptime"</string>
    <string name="get_sleep_str">"Get Sleeptime"</string>
    <string name="get_buzzer_str">"Get Buzzer LV"</string>
    <string name="set_buzzer_str">"Set Buzzer LV"</string>
    <string name="get_buzzer_state_str">"Get Buzzer State"</string>
    <string name="set_buzzer_mute_str">"Set Buzzer Mute"</string>
    <string name="set_buzzer_noisy_str">"Set Buzzer Noisy"</string>
    <string name="get_bat_str">"Get Batt LV"</string>
    <string name="set_default_all">"Set SD Default"</string>
    <string name="get_firm_str">"Get Firmware Version"</string>
    <string name="sleep_str">"Sleeptime"</string>
    <string name="get_charge_str">"Get Charge State"</string>
    <string name="set_serial_str">"Set Serial No."</string>
    <string name="get_serial_str">"Get Serial No."</string>
    <string name="update_rf_firm_str">"Update RFID Firmware"</string>
    <string name="update_firm_str">"Update SLED Firmware"</string>
    <string name="get_bt_version_str">"Get BT VERSION"</string>
    <string name="start_str">Start</string>
    <string name="pause_str">Pause</string>
    <string name="no_sleep_str">No Sleep</string>
    <string name="timer_str">"00:00:00.0"</string>
    <string name="timer_des_str">"ElapsedTime : "</string>
    <string name="read_time_str">"Read Time : "</string>
    <string name="count_str">"0"</string>
    <string name="count_des_str">"Count : "</string>
    <string name="clear_str">Clear List</string>
    <string name="avr_speed_str">"Average Speed : "</string>
    <string name="speed_str">"Speed : "</string>
    <string name="speed_count_str">"0.0"</string>
    <string name="speed_postfix_str">" cnt/sec"</string>
    <string name="time_postfix_str">" sec"</string>
    <string name="filter_on_str">"Filter ON"</string>
    <string name="filter_off_str">"Filter OFF"</string>
    <string name="simple_config_str">"Simple CFG"</string>
    <string name="rssi_str">"RSSI : "</string>
    <string name="loc_str">"LOC : "</string>
    <string name="dup_str">"Dup Cnt : "</string>
    <string name="update_sled_firmware_str">"Update SLED Firmware..."</string>
    <string name="update_sled_bootloader_str">"Update SLED Bootloader..."</string>
    <string name="connecting_str">"Connecting..."</string>
    <string name="battery_state_str">"Battery State : "</string>
    <string name="percent_str">"%"</string>
    <string name="warning_str">WARNING !!!</string>
    <string name="update_warning_rfid_str">Please, pay attension the following before upgrading.  1. Connect the charger to the devices before upgrading. 2. If this upgrade fails on progress, you will not be able to recover using mobile. 3. You must keep the upgrade screen during the upgrade. 4. Never stop this upgrade progress after it has begun. 5. Stop to this upgrade on progress could damage the device.  Do you want to proceed?</string>
    <string name="update_warning_sled_str">Please, pay attension the following before upgrading.  1. Connect the charger to the devices before upgrading. 2. You must keep the upgrade screen during the upgrade. 3. Never stop this upgrade progress after it has begun.  Do you want to proceed?</string>
    <string name="ok_str">OKAY</string>
    <string name="okey_str">Okay</string>
    <string name="cancel_str">"CANCEL"</string>
    <string name="add_pallet_to_warehouse">Add Pallet Warehouse </string>
    <string name="remove_pallet">Remove Pallet</string>
    <string-array name="selection_memtype_array">
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string name="login">LogIn</string>
    <string name="logOut">LogOut</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="transfer">Transfer</string>
    <string name="settings">Settings</string>
    <string name="name_surname">Name Surname</string>
    <string name="rfid_module_battery">RF Module Battery</string>
    <string name="handheld_battery">Handheld Battery</string>
    <string name="welcome_text" translatable="false">RTI Tracker Mobile</string>
    <string name="status">Status</string>
    <string name="job_orders">Job Orders</string>
    <string name="shipment_types">Shipment Types</string>
    <string name="warehouse">Warehouses</string>
    <string name="powered_by" translatable="false">Powered by</string>
    <string name="send_pallets">Send pallets</string>
    <string name="rfid" translatable="false">RFID</string>
    <string name="mode">Mode</string>
    <string name="barcode">Barcode</string>
    <string name="door_selection">Door Selection</string>
</resources>