<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/user_64px"
        android:title="@string/status" />

    <item
        android:id="@+id/navigation_transfer"
        android:icon="@drawable/transfer"
        android:title="@string/transfer" />

<!--    <item-->
<!--        android:id="@+id/navigation_add_palet"-->
<!--        android:icon="@drawable/pallet_64px"-->
<!--        android:title="@string/add_pallet" />-->

    <item
        android:id="@+id/navigation_connect"
        android:icon="@drawable/rfid_64px"
        android:title="@string/connect_str" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings_64px"
        android:title="@string/settings" />
</menu>