<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rfid">

            </TextView>

            <Switch
                android:id="@+id/switch_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Switch>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barcode">

            </TextView>

        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shipment_types"
            android:layout_marginTop="10dp">

        </TextView>

        <Spinner
            android:id="@+id/spinner_shipment_types"
            android:layout_width="match_parent"
            android:layout_height="40dp">

        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warehouse"
            android:layout_marginTop="20dp">

        </TextView>

        <Spinner
            android:id="@+id/spinner_warehouse_list"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp">

        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_orders"
            android:layout_marginTop="20dp">

        </TextView>

        <Spinner
            android:id="@+id/spinner_job_order_list"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp">

        </Spinner>

    </LinearLayout>

</LinearLayout>