<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center|bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textSize="15sp"
            android:padding="3dp"/>

    </LinearLayout>

    <!-- Powered by altis-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center|center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powered_by"
            android:fontFamily="monospace">

        </TextView>

        <ImageView
            android:layout_marginStart="5dp"
            android:layout_width="42dp"
            android:layout_height="33dp"
            android:src="@drawable/altis_logo"
            android:contentDescription="">

        </ImageView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <!-- USER and BATTERY -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">


            <!-- LOGOS -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:contentDescription="@string/empty_str"
                    android:src="@drawable/user_64px"
                    android:visibility="invisible"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/empty_str"
                    android:src="@drawable/reader_64px" />

            </LinearLayout>


            <!-- CONSTANT TEXTs -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="12dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:visibility="invisible"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp"
                    android:text="@string/name_surname"
                    android:visibility="invisible"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rfid_module_battery" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/handheld_battery"
                    android:visibility="gone"/>


            </LinearLayout>


            <!-- VARIABLES -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=": "
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=": "
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/tv_name_surname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="13dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=": " />

                    <TextView
                        android:id="@+id/tv_sled_battery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=": " />

                    <TextView
                        android:id="@+id/tv_device_battery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_user_exit"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/red"
            android:text="@string/logOut"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="invisible" />

        <Button
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:id="@+id/btn_send_pallet"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/green"
            android:text="@string/send_pallets"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>
