<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rfid_module_is"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/battery_state_textview_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rfid_module_battery_is"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/connect_state_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_str"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_double_dot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/battery_state_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_str"
                    android:textSize="16sp" />
            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_disconnect"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/disconnect_str"
                android:textAllCaps="false"
                android:background="@color/red"
                android:textColor="@color/white"/>


            <Button
                android:id="@+id/bt_connect"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/connect_str"
                android:textAllCaps="false"
                android:background="@color/green"
                android:textColor="@color/white"/>



        </LinearLayout>

    </LinearLayout>

</LinearLayout>