<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <!--
        layout_gravity sayfanın merkezin göre ayarlar
        gravity ise layout icindeki elemanları merkez alır.
        -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/rti_logo"
            android:layout_marginBottom="20dp">
        </ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_gravity="center"
                android:inputType="text"
                android:importantForAutofill="no">

            </EditText>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_gravity="center"
                android:importantForAutofill="no">

            </EditText>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"/>
            <!--style="?attr/materialButtonOutlinedStyle"-->


    </LinearLayout>

</LinearLayout>